backend updates, cart, inventory, order, usermessaging,session middleware for cart

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,8 @@ SMTP_USER="pernida12345@gmail.com"
 SMTP_PASS="ivhgdymrsuzzkqrh"
 
 SENDER_EMAIL="pernida12345@gmail.com"
+ADMIN_EMAIL="carrel.golosinda@gmail.com"
+
+CLOUDINARY_CLOUD_NAME=dokoodpvy
+CLOUDINARY_API_KEY=818685916565936
+CLOUDINARY_API_SECRET=88Et4WiTkWuhTP3rE4zQONv5uHA
